deploy: 508139d98fed4a5c0f839c809bbc19d0b45c8929

--- a/index.html
+++ b/index.html
@@ -737,6 +737,139 @@ Indien u het laatste open venster van een toepassing sluit, sluit u ook de toepa
 <p><img src="img/firefox-afbeelding-in-nieuw-tabblad.gif" alt="" style="width:1000px;" /></p>
 </section>
 </foreignObject></svg><svg data-marpit-svg="" viewBox="0 0 1280 720"><foreignObject width="1280" height="720"><section id="90" data-theme="gaia" style="--theme:gaia;">
+<h4 id="bladwijzers-in-firefox-width50px">Bladwijzers in Firefox <img src="img/firefox-bladwijzer-ster-blauw.png" alt="" style="width:50px;" /></h4>
+<ul>
+<li>
+<p>Aanmaken</p>
+</li>
+<li>
+<p>Verwijderen</p>
+</li>
+<li>
+<p>Bladwijzers beheren</p>
+</li>
+<li>
+<p>Bladwijzerbalk</p>
+</li>
+<li>
+<p>Bladwijzers organiseren in mappen</p>
+</li>
+</ul>
+</section>
+</foreignObject></svg><svg data-marpit-svg="" viewBox="0 0 1280 720"><foreignObject width="1280" height="720"><section id="91" data-theme="gaia" style="--theme:gaia;">
+<h5 id="bladwijzer-aanmaken-in-firefox">Bladwijzer aanmaken in Firefox</h5>
+<ul>
+<li>
+<p><code>CTRL+D</code></p>
+</li>
+<li>
+<p>via hamburgermenu <img src="img/firefox-hamburgermenu.png" alt="" style="width:50px;" />, &quot;Bladwijzers &gt;&quot;, &quot;Bladwijzer toevoegen&quot;</p>
+</li>
+<li>
+<p><img src="img/firefox-slotje.png" alt="" style="width:50px;" /> slepen naar Bladwijzerbalk</p>
+</li>
+<li>
+<p>klikken op ster <img src="img/firefox-bladwijzer-ster-leeg.png" alt="" style="width:50px;" /> rechts van het adres in de adresbalk</p>
+</li>
+</ul>
+</section>
+</foreignObject></svg><svg data-marpit-svg="" viewBox="0 0 1280 720"><foreignObject width="1280" height="720"><section id="92" data-theme="gaia" style="--theme:gaia;">
+<h6 id="voorbeeld-bladwijzer-aanmaken-via-de-menus">Voorbeeld bladwijzer aanmaken via de menu's</h6>
+<p><img src="img/firefox-bladwijzer-maken-via-menu.gif" alt="" style="width:1000px;" /></p>
+</section>
+</foreignObject></svg><svg data-marpit-svg="" viewBox="0 0 1280 720"><foreignObject width="1280" height="720"><section id="93" data-theme="gaia" style="--theme:gaia;">
+<h6 id="voorbeeld-bladwijzer-aanmaken-door-width50px-te-slepen">Voorbeeld bladwijzer aanmaken door <img src="img/firefox-slotje.png" alt="" style="width:50px;" /> te slepen</h6>
+<p><img src="img/firefox-bladwijzer-maken-slepen.gif" alt="" style="width:1000px;" /></p>
+</section>
+</foreignObject></svg><svg data-marpit-svg="" viewBox="0 0 1280 720"><foreignObject width="1280" height="720"><section id="94" data-theme="gaia" style="--theme:gaia;">
+<h6 id="voorbeeld-bladwijzer-aanmaken-door-op-width50px-te-klikken">Voorbeeld bladwijzer aanmaken door op <img src="img/firefox-bladwijzer-ster-leeg.png" alt="" style="width:50px;" /> te klikken</h6>
+<p><img src="img/firefox-bladwijzer-maken-met-ster.gif" alt="" style="width:1000px;" /></p>
+</section>
+</foreignObject></svg><svg data-marpit-svg="" viewBox="0 0 1280 720"><foreignObject width="1280" height="720"><section id="95" data-theme="gaia" style="--theme:gaia;">
+<h5 id="bladwijzer-verwijderen-in-firefox">Bladwijzer verwijderen in Firefox</h5>
+<ul>
+<li>
+<p>Klik op blauwe ster <img src="img/firefox-bladwijzer-ster-blauw.png" alt="" style="width:50px;" /> als u op die pagina bent, kies op de popup &quot;Bladwijzer verwijderen&quot;</p>
+</li>
+<li>
+<p>Via bladwijzers beheren</p>
+</li>
+<li>
+<p>Rechtsklikken op bladwijzer op bladwijzerbalk en &quot;Bladwijzer verwijderen&quot; kiezen</p>
+</li>
+</ul>
+</section>
+</foreignObject></svg><svg data-marpit-svg="" viewBox="0 0 1280 720"><foreignObject width="1280" height="720"><section id="96" data-theme="gaia" style="--theme:gaia;">
+<h6 id="voorbeeld-bladwijzer-verwijderen-door-rechts-te-klikken-op-bladwijzerbalk">Voorbeeld bladwijzer verwijderen door rechts te klikken op bladwijzerbalk</h6>
+<p><img src="img/firefox-bladwijzer-verwijderen-uit-map.gif" alt="" style="width:1000px;" /></p>
+</section>
+</foreignObject></svg><svg data-marpit-svg="" viewBox="0 0 1280 720"><foreignObject width="1280" height="720"><section id="97" data-theme="gaia" style="--theme:gaia;">
+<h5 id="bladwijzers-beheren-in-firefox">Bladwijzers beheren in Firefox</h5>
+<ul>
+<li>
+<p>origaniseren van bladwijzers</p>
+<ul>
+<li>
+<p>verwijderen</p>
+</li>
+<li>
+<p>ordenen in mappen</p>
+</li>
+</ul>
+</li>
+<li>
+<p>te bereiken met</p>
+<ul>
+<li>
+<p>hamburgermenu <img src="img/firefox-hamburgermenu.png" alt="" style="width:50px;" /> &quot;Bladwijzers &gt;&quot; &quot;Bladwijzers beheren&quot;</p>
+</li>
+<li>
+<p><code>CTRL+SHIFT+O</code></p>
+</li>
+</ul>
+</li>
+</ul>
+</section>
+</foreignObject></svg><svg data-marpit-svg="" viewBox="0 0 1280 720"><foreignObject width="1280" height="720"><section id="98" data-theme="gaia" style="--theme:gaia;">
+<h6 id="voorbeeld-bladwijzers-beheren-een-bladwijzer-verwijderen">Voorbeeld bladwijzers beheren, een bladwijzer verwijderen</h6>
+<p><img src="img/firefox-bladwijzers-beheren-verwijderen.gif" alt="" style="width:1000px;" /></p>
+</section>
+</foreignObject></svg><svg data-marpit-svg="" viewBox="0 0 1280 720"><foreignObject width="1280" height="720"><section id="99" data-theme="gaia" style="--theme:gaia;">
+<h5 id="bladwijzerbalk">Bladwijzerbalk</h5>
+<ul>
+<li>
+<p>tonen en verbergen</p>
+<ul>
+<li>
+<p>via hamburgermenu <img src="img/firefox-hamburgermenu.png" alt="" style="width:50px;" /> &quot;Bladwijzers &gt;&quot; &quot;Bladwijzerbalk tonen/verbergen&quot;</p>
+</li>
+<li>
+<p><code>CTRL+SHIFT+B</code></p>
+</li>
+</ul>
+</li>
+</ul>
+</section>
+</foreignObject></svg><svg data-marpit-svg="" viewBox="0 0 1280 720"><foreignObject width="1280" height="720"><section id="100" data-theme="gaia" style="--theme:gaia;">
+<h6 id="voorbeeld-bladwijzerbalk-tonen-en-verbergen">Voorbeeld bladwijzerbalk tonen en verbergen</h6>
+<p><img src="img/firefox-bladwijzerbalk-verbergen-tonen.gif" alt="" style="width:1000px;" /></p>
+</section>
+</foreignObject></svg><svg data-marpit-svg="" viewBox="0 0 1280 720"><foreignObject width="1280" height="720"><section id="101" data-theme="gaia" style="--theme:gaia;">
+<h5 id="bladwijzers-groeperen-in-mappen">Bladwijzers groeperen in mappen</h5>
+<ul>
+<li>
+<p>Via bladwijzers beheren <code>CTRL+SHIFT+O</code></p>
+</li>
+<li>
+<p>Via slepen op de bladwijzerbalk</p>
+</li>
+</ul>
+</section>
+</foreignObject></svg><svg data-marpit-svg="" viewBox="0 0 1280 720"><foreignObject width="1280" height="720"><section id="102" data-theme="gaia" style="--theme:gaia;">
+<h6 id="voorbeeld-bladwijzers-groeperen-op-de-bladwijzerbalk">Voorbeeld bladwijzers groeperen op de bladwijzerbalk</h6>
+<p><img src="img/firefox-bladwijzermap-maken-slepen.gif" alt="" style="width:1000px;" /></p>
+</section>
+</foreignObject></svg><svg data-marpit-svg="" viewBox="0 0 1280 720"><foreignObject width="1280" height="720"><section id="103" data-theme="gaia" style="--theme:gaia;">
 <h4 id="essenti%C3%ABle-extensies-installeren">Essentiële extensies installeren</h4>
 <ul>
 <li>
@@ -751,11 +884,11 @@ gaat automatisch akkoord met alle cookies</p>
 </li>
 </ul>
 </section>
-</foreignObject></svg><svg data-marpit-svg="" viewBox="0 0 1280 720"><foreignObject width="1280" height="720"><section id="91" data-theme="gaia" style="--theme:gaia;">
+</foreignObject></svg><svg data-marpit-svg="" viewBox="0 0 1280 720"><foreignObject width="1280" height="720"><section id="104" data-theme="gaia" style="--theme:gaia;">
 <h5 id="voorbeeld-extensie-installeren-door-te-zoeken">Voorbeeld extensie installeren door te zoeken</h5>
 <p><img src="img/firefox-adblocker-for-youtube-installeren.gif" alt="" style="width:1000px;" /></p>
 </section>
-</foreignObject></svg><svg data-marpit-svg="" viewBox="0 0 1280 720"><foreignObject width="1280" height="720"><section id="92" data-theme="gaia" style="--theme:gaia;">
+</foreignObject></svg><svg data-marpit-svg="" viewBox="0 0 1280 720"><foreignObject width="1280" height="720"><section id="105" data-theme="gaia" style="--theme:gaia;">
 <h5 id="hulp-openen-in-firefox">Hulp openen in Firefox</h5>
 <p><img src="img/firefox-hulp-openen.gif" alt="" style="width:1000px;" /></p>
 </section>
