--- a/oefeningen.html
+++ b/oefeningen.html
@@ -373,7 +373,7 @@
 <ol type="1">
 <li><p>Start Firefox met <code>SUPER+1</code>.</p>
 <ul>
-<li><p>ga naar de URL: <code>github.com/slspeek/beginners-cursus-linux</code>.</p></li>
+<li><p>ga naar de URL: <code>github.com/slspeek/linux-beginners-cursus</code>.</p></li>
 <li><p>scroll omlaag en ga via de link naar de presentatie van de cursus.</p></li>
 <li><p>sluit de browser af met <code>CTRL+Q</code></p></li>
 </ul></li>
@@ -387,7 +387,7 @@
 </ul></li>
 <li><p>Start Firefox met <code>SUPER+1</code>.</p>
 <ul>
-<li><p>ga naar de URL: <code>github.com/slspeek/beginners-cursus-linux</code></p></li>
+<li><p>ga naar de URL: <code>github.com/slspeek/linux-beginners-cursus</code></p></li>
 <li><p>scroll naar “Onderdelen”</p></li>
 <li><p>op de Samenvatting en Oefeningen op een apart tabblad (en blijf op de eerste pagina)</p></li>
 <li><p>gebruik <code>CTRL+TAB</code> om de twee nieuwe pagina’s te bekijken</p></li>
@@ -402,19 +402,19 @@
 </ul></li>
 <li><p>Start Firefox met <code>SUPER+1</code>.</p>
 <ul>
-<li><p>ga naar de URL: <code>github.com/slspeek/beginners-cursus-linux</code></p></li>
+<li><p>ga naar de URL: <code>github.com/slspeek/linux-beginners-cursus</code></p></li>
 <li><p>maak een bladwijzer met <code>CTRL+D</code></p></li>
 <li><p>sluit de browser af met <code>CTRL+Q</code></p></li>
 </ul></li>
 <li><p>Start Firefox met <code>SUPER+1</code>.</p>
 <ul>
-<li><p>ga met behulp van de bladwijzer naar de URL: <code>github.com/slspeek/beginners-cursus-linux</code></p>
+<li><p>ga met behulp van de bladwijzer naar de URL: <code>github.com/slspeek/linux-beginners-cursus</code></p>
 <ul>
 <li>maak bladwijzerbalk zichtbaar met <code>CTRL+SHIFT+B</code> als deze verborgen is</li>
 </ul></li>
 <li><p>scroll naar beneden naar de README naar “Onderdelen”</p></li>
 <li><p>klik op de link “Presentatie”</p></li>
-<li><p>maak een bladwijzer door rechts op <img src="img/firefox-bladwijzer-ster-leeg.png" /> te klikken</p></li>
+<li><p>maak een bladwijzer door rechts op <img src="img/firefox-bladwijzer-ster-leeg.png" width="30" /> te klikken</p></li>
 <li><p>sluit de browser af met <code>CTRL+Q</code></p></li>
 </ul></li>
 <li><p>Start Firefox met <code>SUPER+1</code>.</p>
@@ -422,9 +422,33 @@
 <li><p>ga met behulp van de bladwijzer naar de “Presentatie” van de cursus</p></li>
 <li><p>ga naar de tweede pagina</p></li>
 <li><p>klik met op “Samenvatting”</p></li>
-<li><p>maak een bladwijzer door <img src="img/firefox-slotje.png" /> naar de bladwijzerbalk te slepen</p></li>
+<li><p>maak een bladwijzer door <img src="img/firefox-slotje.png" width="30" /> naar de bladwijzerbalk te slepen</p></li>
 <li><p>sluit de browser af met <code>CTRL+Q</code></p></li>
 </ul></li>
+<li><p>Start Firefox met <code>SUPER+1</code>.</p>
+<ul>
+<li><p>maak door rechts te klikken op de bladwijzerbalk en “Map toevoegen …” te kiezen een map “cursus” aan</p></li>
+<li><p>sleep de drie bladwijzers over de cursus naar deze map</p></li>
+<li><p>en order ze zo dat het resultaat er zo uitziet: <img src="img/firefox-bladwijzer-map-cursus-3-items.png" height="100" /></p></li>
+<li><p>sluit de browser af met <code>CTRL+Q</code></p></li>
+</ul></li>
+<li><p>Start Firefox met <code>SUPER+1</code>.</p>
+<ul>
+<li><p>ga met behulp van de bladwijzer naar de “Presentatie” van de cursus</p></li>
+<li><p>ga naar de tweede pagina</p></li>
+<li><p>klik met <code>CTRL</code> ingedrukt op “Oefeningen” en “Begrippenlijst”</p></li>
+<li><p>breng met behulp van <code>CTRL+TAB</code> de tabbladen 1 voor 1 naar voren en sleep <img src="img/firefox-slotje.png" width="30" /> naar de map “cursus” op de bladwijzerbalk</p></li>
+</ul></li>
+<li><p>Start Firefox met <code>SUPER+1</code></p>
+<ul>
+<li><p>ga naar <code>kernel.org</code></p></li>
+<li><p>maak een bladwijzer met <code>CTRL+D</code></p></li>
+<li><p>ga naar “Bladwijzers beheren” met <code>CTRL+SHIFT+O</code></p></li>
+<li><p>verwijder de bladwijzer naar <code>kernel.org</code></p></li>
+<li><p>sluit de browser af met <code>CTRL+Q</code></p></li>
+</ul></li>
+<li><p>Noem drie manieren waarop je een bladwijzer in Firefox kunt maken (er zijn er vier).</p></li>
+<li><p>Noem drie manieren waarop je een bladwijzer in Firefox kunt verwijderen.</p></li>
 <li><p>Start Firefox met <code>SUPER+1</code></p>
 <ul>
 <li><p>ga naar ‘Add-ons en thema’s’ met <code>CTRL+SHIFT+A</code> of via het hamburger menu rechtbovenin.</p></li>
@@ -434,7 +458,7 @@
 </ul></li>
 <li><p>Start Firefox met <code>SUPER+1</code>.</p>
 <ul>
-<li><p>ga naar de URL: <code>slspeek.github.io/beginners-cursus-linux/samenvatting.html</code>.</p></li>
+<li><p>ga naar de URL: <code>slspeek.github.io/linux-beginners-cursus/samenvatting.html</code>.</p></li>
 <li><p>scroll omlaag naar “Internet browser: Firefox” en dan naar “Essentiële extensies installeren”, klik op de link van “I don’t care about cookies”</p></li>
 <li><p>klik op de knop “Toevoegen aan Firefox”</p></li>
 <li><p>ga na met <code>CTRL+SHIFT+A</code> (Add-ons) of de extensie is geïnstalleerd</p></li>
