--- a/samenvatting.html
+++ b/samenvatting.html
@@ -199,7 +199,8 @@
 </ul></li>
 <li><p>Bladwijzers groeperen in mappen</p>
 <ul>
-<li>Via bladwijzers beheren <code>CTRL+SHIFT+O</code></li>
+<li><p>Via bladwijzers beheren <code>CTRL+SHIFT+O</code></p></li>
+<li><p>Via slepen op de bladwijzerbalk</p></li>
 </ul></li>
 </ul></li>
 <li><p>Essentiële extensies installeren</p>
@@ -258,6 +259,7 @@
 <li><p><code>CTRL+D</code></p></li>
 </ul></li>
 <li><p>Sleep map naar linkerpaneel boven “Nieuwe bladwijzer”</p></li>
+<li><p>Verwijderen door rechts te klikken op de bladwijzer in het linkerpaneel en “Verwijderen uit bladwijzers” in het popup menu te kiezen</p></li>
 </ul></li>
 </ol>
 <h1 id="toepassingen-installeren">Toepassingen installeren</h1>
