deploy: d85671e181a15f5d7e7ba63d774d24bc0f10f50c

--- a/samenvatting.html
+++ b/samenvatting.html
@@ -261,6 +261,33 @@
 <li><p>Sleep map naar linkerpaneel boven “Nieuwe bladwijzer”</p></li>
 <li><p>Verwijderen door rechts te klikken op de bladwijzer in het linkerpaneel en “Verwijderen uit bladwijzers” in het popup menu te kiezen</p></li>
 </ul></li>
+<li><p>Bestanden inpakken en uitpakken</p>
+<ul>
+<li><p>Bestanden inpakken</p>
+<ul>
+<li><p>meerdere bestanden en of mappen in één archief bestand opslaan</p></li>
+<li><p>klik rechts op map, bestand of bestandsselectie en kies “Inpakken …”</p>
+<ul>
+<li><p>geef een archief naam op</p></li>
+<li><p>klik op “Maken”</p></li>
+</ul></li>
+</ul></li>
+<li><p>Archief bestand uitpakken</p>
+<ol type="1">
+<li><p>Dubbelklik zip archief om toepassing “Archiefbeheer” op dit archief te openen</p>
+<ul>
+<li><p>klik “Uitpakken”</p></li>
+<li><p>kies een map waarheen het archief moet worden uitgepakt</p></li>
+<li><p>bevestig dit door op “Selecteren” te klikken</p></li>
+</ul></li>
+<li><p>Klik rechts op zip archief en kies “Uitpakken naar …”</p>
+<ul>
+<li><p>kies een map waarheen het archief moet worden uitgepakt</p></li>
+<li><p>bevestig dit door op “Uitpakken” te klikken</p></li>
+<li><p>geef aan of u wel of niet de uitgepakte bestanden in de bestandsbeheerder wenst te zien</p></li>
+</ul></li>
+</ol></li>
+</ul></li>
 </ol>
 <h1 id="toepassingen-installeren">Toepassingen installeren</h1>
 <ol type="1">
