deploy: eb1dee64dfa178fedce10fcdca484c69261286c5

--- a/oefeningen.html
+++ b/oefeningen.html
@@ -472,6 +472,10 @@
 <li><p>sluit de browser af met <code>CTRL+Q</code></p></li>
 </ul></li>
 </ol>
+<h2 id="bestandsbeheerder">Bestandsbeheerder</h2>
+<ol type="1">
+<li>Waarvoor hebt u een bestandsbeheerder nodig (noem vier redenen)?</li>
+</ol>
 <h1 id="toepassingen-installeren">Toepassingen installeren</h1>
 <ol type="1">
 <li><p>Standaard applicatie wijzigen</p>
