--- a/samenvatting.html
+++ b/samenvatting.html
@@ -216,12 +216,20 @@
 </ol>
 <h2 id="bestandsbeheerder">Bestandsbeheerder</h2>
 <ol type="a">
+<li><p>Wat kunt u met de bestandsbeheerder?</p>
+<ul>
+<li><p>inhoud van map bekijken</p></li>
+<li><p>bestanden of mappen verplaatsen of kopiëren</p></li>
+<li><p>zoeken in bestanden</p></li>
+<li><p>archieven aanmaken, inzien en uitpakken</p></li>
+</ul></li>
 <li><p>Openen met</p>
 <ul>
 <li><p><code>SUPER+E</code></p></li>
 <li><p><code>SUPER+4</code></p></li>
 <li><p><code>SUPER best ENTER</code></p></li>
 <li><p>Klikken op <img src="img/bestanden-icon.png" width="30" /> op de dash</p></li>
+<li><p>extra venster <code>CTRL+N</code></p></li>
 </ul></li>
 <li><p>Verschillende views</p>
 <ul>
@@ -251,6 +259,11 @@
 <li><p>klik rechts op item en kies “Eigenschappen”</p></li>
 <li><p><code>ALT+ENTER</code></p></li>
 </ul></li>
+<li><p>Zoeken van mappen of bestanden</p>
+<ul>
+<li><p>klik op <img src="img/bestanden-vergrootglas.png" width="30" /></p></li>
+<li><p><code>CTRL+F</code></p></li>
+</ul></li>
 <li><p>Bladwijzer maken van map of lokatie</p>
 <ul>
 <li><p>Navigeer naar map</p>
@@ -274,19 +287,18 @@
 </ul></li>
 <li><p>Archief bestand uitpakken</p>
 <ol type="1">
-<li><p>Dubbelklik zip archief om toepassing “Archiefbeheer” op dit archief te openen</p>
-<ul>
-<li><p>klik “Uitpakken”</p></li>
-<li><p>kies een map waarheen het archief moet worden uitgepakt</p></li>
-<li><p>bevestig dit door op “Selecteren” te klikken</p></li>
-</ul></li>
 <li><p>Klik rechts op zip archief en kies “Uitpakken naar …”</p>
 <ul>
 <li><p>kies een map waarheen het archief moet worden uitgepakt</p></li>
 <li><p>bevestig dit door op “Uitpakken” te klikken</p></li>
 <li><p>geef aan of u wel of niet de uitgepakte bestanden in de bestandsbeheerder wenst te zien</p></li>
 </ul></li>
+<li><p>Klik rechts op zip archief en kies “Uitpakken”. Dit pakt het archief uit in de map waar het archief staat.</p></li>
 </ol></li>
+<li><p>Archief bestand inzien</p>
+<ul>
+<li>dubbelklik zip bestand</li>
+</ul></li>
 </ul></li>
 </ol>
 <h1 id="toepassingen-installeren">Toepassingen installeren</h1>
