--- a/oefeningen.html
+++ b/oefeningen.html
@@ -541,6 +541,41 @@
 </ul></li>
 <li><p>Sluit de bestandsbeheerder met <code>ALT+F4</code></p></li>
 </ul></li>
+<li><p>Map <code>Video's</code> in de prullenbak gooien en terughalen</p>
+<ul>
+<li><p>Open bestandsbeheerder met <code>SUPER+E</code></p></li>
+<li><p>Klik rechts op <code>Video's</code> en kies “In Prullenbak gooien”</p></li>
+<li><p>Klik in het linkerpaneel op “Prullenbak”</p></li>
+<li><p>Hier ziet u <code>Video's</code> staan</p></li>
+<li><p>Klik rechts op <code>Video's</code> en kies “Uit Prullenbak terughalen”</p></li>
+<li><p>Merk op dat <code>Video's</code> niet meer in de “Prullenbak” zit</p></li>
+<li><p>Navigeer naar “Persoonlijke map” door op het linkerpaneel op “Persoonlijke map” te klikken</p></li>
+<li><p>U ziet dat de map <code>Video's</code> er weer staat</p></li>
+<li><p>Sluit de bestandsbeheerder met <code>ALT+F4</code></p></li>
+</ul></li>
+<li><p>Een bestand in de prullenbak gooien en er weer uit terughalen.</p>
+<ul>
+<li><p>Open bestandsbeheerder met <code>SUPER+E</code></p></li>
+<li><p>Maak een map <code>oefening-prullenbak</code> aan</p></li>
+<li><p>Klik rechts op <code>oefening-prullenbak</code> en kies “In Prullenbak gooien”</p></li>
+<li><p>Merk op dat <code>oefening-prullenbak</code> niet meer in de “Persoonlijke map” is te zien. Het is weg.</p></li>
+<li><p>Klik in het linkerpaneel op “Prullenbak”</p></li>
+<li><p>Hier ziet u <code>oefening-prullenbak</code> staan</p></li>
+<li><p>Klik rechts op <code>oefening-prullenbak</code> en kies “Uit Prullenbak terughalen”</p></li>
+<li><p>Merk op dat <code>oefening-prullenbak</code> niet meer in de “Prullenbak” zit</p></li>
+<li><p>Navigeer naar “Persoonlijke map” door op het linkerpaneel op “Persoonlijke map” te klikken</p></li>
+<li><p>U ziet dat de map <code>oefening-prullenbak</code> er weer staat</p></li>
+<li><p>Selecteer <code>oefening-prullenbak</code> en druk op <code>DELETE</code></p></li>
+<li><p>Sluit de bestandsbeheerder met <code>ALT+F4</code></p></li>
+</ul></li>
+<li><p>Prullenbak legen</p>
+<ul>
+<li><p>Open bestandsbeheerder met <code>SUPER+E</code></p></li>
+<li><p>Klik in het linkerpaneel op “Prullenbak”</p></li>
+<li><p>Hier ziet u alleen <code>oefening-prullenbak</code> staan</p></li>
+<li><p>Kies uit het actiemenu (<code>F10</code>) “Prullenbak legen”</p></li>
+<li><p>Sluit de bestandsbeheerder met <code>ALT+F4</code></p></li>
+</ul></li>
 <li><p>Bladwijzer van een map maken van één uw projecten</p>
 <ul>
 <li><p>Open bestandsbeheerder met <code>SUPER+E</code></p></li>
@@ -566,6 +601,21 @@
 <li><p>Verwijder de bladwijzers naar de mappen <code>ijzertijd</code> en <code>bronstijd</code> door in het linkerpaneel rechts te klikken op de bladwijzers en uit het menu “Verwijderen uit bladwijzers” te kiezen.</p></li>
 <li><p>Overtuig uzelf ervan dat in de map <code>werkstuk-protohistorie</code> de mappen <code>ijzertijd</code> en <code>bronstijd</code> nog bestaan.</p></li>
 <li><p>Sluit de bestandsbeheerder met <code>ALT+F4</code></p></li>
+</ul></li>
+<li><p>Gebruik eigenschappen in bestandsbeheerder</p>
+<ul>
+<li><p>Open bestandsbeheerder met <code>SUPER+E</code></p></li>
+<li><p>Navigeer naar <code>Afbeeldingen</code></p></li>
+<li><p>Hoe groot is de map <code>bloemen</code>.</p>
+<ul>
+<li><p>Selecteer <code>bloemen</code></p></li>
+<li><p>Klik rechts en kies “Eigenschappen”</p></li>
+</ul></li>
+<li><p>Sluit de bestandsbeheerder met <code>ALT+F4</code></p></li>
+</ul></li>
+<li><p>Hoe groot in pixels is het plaatje <code>blaassilene.jpg</code> (anjerfamilie)?</p>
+<ul>
+<li>Gebruik “Eigenschappen” van het bestand</li>
 </ul></li>
 <li><p>Werkstukje maken over protohistorie.</p>
 <ul>
@@ -595,7 +645,7 @@
 <li><p>Archief uitpakken in nieuwe map</p>
 <ul>
 <li><p>Open bestandsbeheerder met <code>SUPER+E</code></p></li>
-<li><p>Maak map <code>plaatjes</code> aan</p></li>
+<li><p>Maak map <code>plaatjes</code> aan. In welke map wordt <code>plaatjes</code> aangemaakt?</p></li>
 <li><p>Navigeer naar <code>Afbeeldingen</code> en kopieer <code>bloemen.zip</code> door er rechts op te klikken en “Kopieren” te kiezen</p></li>
 <li><p>Navigeer naar de eerder gemaakte <code>plaatjes</code> map. De druk <code>CTRL+V</code> om een kopie van het <code>bloemen.zip</code> archief hier te plaatsen.</p></li>
 <li><p>Klik rechts op <code>bloemen.zip</code> en kies “Uitpakken”. Er is nu een map <code>bloemen</code> in <code>plaatjes</code> gemaakt. Overtuig u ervan dat dit precies de families bevat die u gemaakt had.</p></li>
@@ -611,6 +661,27 @@
 <li><p>Gooi vanuit “Persoonlijke map” <code>plaatjes</code> in de prullenbak.</p></li>
 <li><p>Sluit de bestandsbeheerder met <code>ALT+F4</code></p></li>
 </ul></li>
+<li><p>De hulp functie gebruiken om op bestandsgrootte te sorteren</p>
+<ul>
+<li><p>Open bestandsbeheerder met <code>SUPER+E</code></p></li>
+<li><p>Ga naar pictogram weergave</p></li>
+<li><p>Open de hulp functie <code>F1</code></p></li>
+<li><p>Zoek met <code>CTRL+S</code> naar <code>sorteren</code>, en ga naar “Bestanden en mappen sorteren”</p></li>
+<li><p>Volg de instructies om op bestandsgrootte te sorteren in pictogramweergave</p></li>
+<li><p>Verander van weergave naar lijstweergave</p></li>
+<li><p>Volg de instructies om weer naar alphabetische oplopend sortering terug te keren</p></li>
+<li><p>Sluit de hulp</p></li>
+<li><p>Sluit de bestandsbeheerder met <code>ALT+F4</code></p></li>
+</ul></li>
+<li><p>Open en sluit het sneltoetsen overzicht in de bestandsbeheerder</p>
+<ul>
+<li><p>Open bestandsbeheerder met <code>SUPER+E</code></p></li>
+<li><p>Gebruik <code>CTRL+?</code> om het sneltoetsen venster te openen</p></li>
+<li><p>Sluit het met <code>ESC</code></p></li>
+<li><p>Sluit de bestandsbeheerder met <code>ALT+F4</code></p></li>
+</ul></li>
+<li><p>Met welke sneltoets kunt u een map of bestand hernoemen?</p></li>
+<li><p>Met welke sneltoets kunt u in één keer naar uw persoonlijke map terugkeren?</p></li>
 </ol>
 <h1 id="toepassingen-installeren">Toepassingen installeren</h1>
 <ol type="1">
