--- a/samenvatting.html
+++ b/samenvatting.html
@@ -219,7 +219,7 @@
 <li><p>Wat kunt u met de bestandsbeheerder?</p>
 <ul>
 <li><p>inhoud van map bekijken</p></li>
-<li><p>bestanden of mappen verplaatsen of kopiëren</p></li>
+<li><p>bestanden of mappen verplaatsen, kopiëren en in de prullenbak gooien</p></li>
 <li><p>zoeken in bestanden</p></li>
 <li><p>archieven aanmaken, inzien en uitpakken</p></li>
 </ul></li>
@@ -247,12 +247,31 @@
 </ul></li>
 <li><p>Mappen maken</p>
 <ul>
-<li><p>via de drie puntjes boven elkaar <img src="img/persoonlijke-map-menu.png" height="20" /></p></li>
+<li><p>via de drie puntjes boven elkaar <img src="img/persoonlijke-map-menu.png" height="20" /> (het actiemenu)</p></li>
 <li><p><code>CTRL+SHIFT+N</code></p></li>
 </ul></li>
 <li><p>Bestanden of mappen verplaatsen</p>
 <ul>
-<li>sleep ze naar gewenste map</li>
+<li><p>sleep ze naar gewenste map</p></li>
+<li><p>via knippen, kopiëren en plakken</p>
+<ul>
+<li><p><code>CTRL+X</code> voor knippen, <code>CTRL+C</code> voor kopiëren en <code>CTRL+V</code> voor plakken</p></li>
+<li><p>via het rechtsklik menu</p></li>
+</ul></li>
+</ul></li>
+<li><p>Bestanden of mappen in de prullenbak gooien</p>
+<ul>
+<li><p>geselecteerd bestand of map in de prullenbak gooien met <code>DELETE</code> toets</p></li>
+<li><p>via het rechtsklik menu “In Prullenbak gooien”</p></li>
+</ul></li>
+<li><p>Prullenbak legen</p>
+<ul>
+<li><p>Indien u de schijfruimte terug wilt hebben die de bestanden in “Prullenbak” innemen kunt u de prullenbak legen</p>
+<ul>
+<li><strong>N.B.</strong> dit kan niet ongedaan worden gemaakt</li>
+</ul></li>
+<li><p>Ga naar de “Prullenbak” in de bestandsbeheerder en kies “Prullenbak legen” uit het actiemenu</p>
+<p><img src="img/bestanden-prullenbak-legen.png" /></p></li>
 </ul></li>
 <li><p>Eigenschappen van bestanden en mappen</p>
 <ul>
@@ -298,6 +317,19 @@
 <li><p>Archief bestand inzien</p>
 <ul>
 <li>dubbelklik zip bestand</li>
+</ul></li>
+</ul></li>
+<li><p>Hulp opvragen en sneltoetsen tonen</p>
+<ul>
+<li><p>Hulp opvragen</p>
+<ul>
+<li><p><code>F1</code></p></li>
+<li><p>via hamburgermenu <img src="img/firefox-hamburgermenu.png" height="20" />, en dan “Hulp”</p></li>
+</ul></li>
+<li><p>Sneltoetsen</p>
+<ul>
+<li><p><code>CTRL+?</code></p></li>
+<li><p>via hamburgermenu <img src="img/firefox-hamburgermenu.png" height="20" />, en dan “Sneltoetsen”</p></li>
 </ul></li>
 </ul></li>
 </ol>
